fixed maven out of memory error